[gd_scene load_steps=13 format=3 uid="uid://dgn0d3lej4gd"]

[ext_resource type="Script" path="res://hotel/rooms/chamber/chamber.gd" id="1_r577n"]
[ext_resource type="PackedScene" uid="uid://d1p4o5bdtwxmg" path="res://hotel/rooms/chamber/chamber.blend" id="2_3k8fq"]
[ext_resource type="PackedScene" uid="uid://navwyu1hgd6i" path="res://hotel/door/door.tscn" id="3_fb86y"]
[ext_resource type="Texture2D" uid="uid://b3rtao2o5w7q" path="res://hotel/walls/air_vent.png" id="4_hf6jl"]
[ext_resource type="PackedScene" uid="uid://calatprruhly4" path="res://hotel/rooms/chamber/window/Window Small.glb" id="5_jet4e"]
[ext_resource type="Material" uid="uid://douhntb645irq" path="res://resources/materials/dark_wood.tres" id="6_ryb6r"]

[sub_resource type="BoxShape3D" id="BoxShape3D_j80sp"]
size = Vector3(5.4, 4, 3.4)

[sub_resource type="BoxShape3D" id="BoxShape3D_0qu65"]
size = Vector3(6, 4, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_t5cqu"]
size = Vector3(4, 4, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_c8obp"]
size = Vector3(4.9, 4, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_s78rc"]
size = Vector3(1.9, 4, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_6iouc"]
size = Vector3(1.2, 2, 0.2)

[node name="room" type="StaticBody3D" groups=["Wall"]]
collision_layer = 35
collision_mask = 35
script = ExtResource("1_r577n")

[node name="chamber" parent="." instance=ExtResource("2_3k8fq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.5)

[node name="door" parent="." instance=ExtResource("3_fb86y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 4)

[node name="customer_position" type="Marker3D" parent="."]
transform = Transform3D(-0.388706, 0, 0.921362, 0, 1, 0, -0.921362, 0, -0.388706, -1.37102, 0, 0.76417)

[node name="bed_marker" type="Marker3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 1.6, 0, 2)

[node name="room_area" type="Area3D" parent="."]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)
collision_layer = 0
collision_mask = 23

[node name="collision" type="CollisionShape3D" parent="room_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.9, 0)
shape = SubResource("BoxShape3D_j80sp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("BoxShape3D_0qu65")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -3, 2, 1.9)
shape = SubResource("BoxShape3D_t5cqu")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3, 2, 2)
shape = SubResource("BoxShape3D_t5cqu")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, -1.74846e-07, 0, 1, 0, 1.74846e-07, 0, 1, 1.55433, 2, 4)
shape = SubResource("BoxShape3D_c8obp")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, -1.74846e-07, 0, 1, 0, 1.74846e-07, 0, 1, -3.05867, 2, 4)
shape = SubResource("BoxShape3D_s78rc")

[node name="CollisionShape3D6" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, -1.74846e-07, 0, 1, 0, 1.74846e-07, 0, 1, -1.50867, 3, 4)
shape = SubResource("BoxShape3D_6iouc")

[node name="carpet_position" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 2)

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, -1.74846e-07, 0, 1, 0, 1.74846e-07, 0, 1, 1.6, 3, 0.005)
pixel_size = 0.015
shaded = true
double_sided = false
texture_filter = 0
texture = ExtResource("4_hf6jl")

[node name="Root Scene" parent="." instance=ExtResource("5_jet4e")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Window_Small2" parent="Root Scene/RootNode" index="0"]
surface_material_override/0 = ExtResource("6_ryb6r")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="area_entered" from="room_area" to="." method="_on_room_area_area_entered"]
[connection signal="body_entered" from="room_area" to="." method="_on_room_area_body_entered"]
[connection signal="body_exited" from="room_area" to="." method="_on_room_area_body_exited"]

[editable path="chamber"]
[editable path="Root Scene"]
